--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
     "react-router-dom": "^5.0.1",
+    "react-vis": "^1.11.7",
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
